# icfp09_satellites

./: .gitignore  Makefile  README.md  main.cpp
debug_viz/: debug_viz.py
vm/: CMakeLists.txt  Makefile  agent.cpp  agent.h  bin.h  bin1.cpp  bin1.d  bin2.cpp  bin2.d  bin3.cpp  bin4.cpp  clear_sky.cpp  clear_sky.h  cmake_install.cmake  common.h  controller.cpp  controller.h  ellipse.cpp  ellipse.h  excentric.cpp  excentric.h  fileparser.cpp  fileparser.h  generate.sh  genetic_optimizer.cpp  genetic_optimizer.d  genetic_optimizer.h  instructions.cpp  instructions.d  instructions.h  main  main.cpp  main.d  meet_and_greed.cpp  meet_and_greed.h  optimizer  renderer.cpp  renderer.h  satellite.cpp  satellite.h  (+8 more)
vm/results/: 1001.txt  1002.txt  1003.txt  1004.txt  2001.txt  2002.txt  2003.txt  2004.txt  3001.txt  3002.txt  3003.txt  3004.txt
